--- a/src/templates/me.html
+++ b/src/templates/me.html
@@ -309,6 +309,15 @@
                             <span class="btn btn-default rectangle full-width text-ellipsis" ng-click="toggleWorkday('work_sunday')" ng-class="{'btn-primary':user.work_sunday == 1}">周日</span>
                         </div>
                     </div>
+                    <div class="section">说明</div>
+                    <div class="row grid-gutter">
+                        <div class="col-xs-4">
+                            <span class="btn btn-primary rectangle full-width text-ellipsis">工作日</span>
+                        </div>
+                        <div class="col-xs-4">
+                            <span class="btn btn-default rectangle full-width text-ellipsis">非工作日</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
