--- a/src/templates/modify_trade_password.html
+++ b/src/templates/modify_trade_password.html
@@ -24,8 +24,8 @@
                     <!-- <span class="tip text-warning" ng-show="modifyForm.verifycode.$invalid && modifyForm.verifycode.$dirty">必填，验证码为6位</span> -->
                 </div>
                 <div class="kk-input-group flat">
-                    <input type="password" name="password" class="form-control" placeholder="请输入交易密码" ng-model="input.password" required ng-minlength=6 ng-maxlength=6 />
-                    <!-- <span class="tip text-warning" ng-show="modifyForm.password.$invalid && modifyForm.password.$dirty">必填,密码6位</span> -->
+                    <input type="password" name="password" class="form-control" placeholder="请输入交易密码" ng-model="input.password" required ng-pattern="/[0-9]$/" ng-minlength=6 ng-maxlength=6 />
+                    <!-- <span class="tip text-warning" ng-show="modifyForm.password.$invalid && modifyForm.password.$dirty">必填,密码6位数字</span> -->
                 </div>
                 <div class="kk-input-group">
                     <button type="submit" class="btn btn-warning block full-width">{{"Change Transaction Password" | translate}}</button>
