--- a/src/templates/recommands.html
+++ b/src/templates/recommands.html
@@ -32,7 +32,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="recommand-avatar">
+                <div class="recommand-avatar" ng-click="preview_translator(recommand.user_id)">
                     <img ng-src="{{staticImageUrl + recommand.avatar || '../images/avatar_1.png'}}" err-src="../images/avatar_1.png" alt="">
                 </div>
             </div>
