--- a/src/templates/setting.html
+++ b/src/templates/setting.html
@@ -18,13 +18,13 @@
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
             <a ng-href="#/privacy" class="list-group-item">
-                <span class="list-group-item-text">{{"Privacy Policy" | translate}}</span>
+                <span class="list-group-item-text">{{"Privacy Policy" | translate}}/{{"Terms of Use" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
-            <a ng-href="#/usage" class="list-group-item">
+            <!-- <a ng-href="#/usage" class="list-group-item">
                 <span class="list-group-item-text">{{"Terms of Use" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
-            </a>
+            </a> -->
             <a class="list-group-item">
                 <span class="list-group-item-text">{{"Version" | translate}}</span>
                 <span class="pull-right">8.5</span>
@@ -35,7 +35,7 @@
                 <span class="list-group-item-text">{{"About Us" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
-            <a class="list-group-item" tel="400-000-000">
+            <a ng-href="#/contact" class="list-group-item">
                 <span class="list-group-item-text">{{"Contact Us" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
