--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -153,7 +153,7 @@
             </div>
         </div>
     </div>
-    <div class="scrollable-footer" ng-hide="from =='tasks'">
+    <div class="scrollable-footer" ng-hide="(to =='preview')">
         <div class="btn-group justified" ng-if="translator.user_id">
             <div class="btn btn-success rectangle">
                 <span ui-turn-on="share_panel">将我分享给朋友</span>
